--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,37 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="theme-color"
+      content="#ffffff" />
     <title>Gulp 2025 Static Site</title>
+    <meta
+      name="description"
+      content="Modern static site built with Gulp in 2025" />
     <link
       rel="stylesheet"
       href="css/main.css" />
     <link
       rel="icon"
-      href="images/icons/check.svg" />
+      href="images/icons/check.svg"
+      type="image/svg+xml" />
   </head>
   <body>
-    <header class="site-header">
+    <header
+      class="site-header"
+      role="banner">
       <div class="container">
         <img
           src="images/logo.png"
-          alt="Site Logo"
-          class="logo" />
-        <nav class="nav">
+          alt="Gulp Static Site Logo"
+          class="logo"
+          width="150"
+          height="48"
+          loading="lazy"
+          decoding="async" />
+        <nav
+          class="nav"
+          aria-label="Main navigation">
           <ul class="nav-list">
             <li><a href="#features">Features</a></li>
             <li><a href="#signup">Sign Up</a></li>
@@ -28,6 +43,7 @@
         </nav>
       </div>
     </header>
+
     <main>
       <section
         id="hero"
@@ -45,8 +61,13 @@
           >
           <img
             src="images/hero.jpg"
-            alt="Hero Banner"
-            class="hero-image" />
+            srcset="images/hero.jpg 1x, images/hero@2x.jpg 2x"
+            alt="Illustration showing fast website performance"
+            class="hero-image"
+            width="800"
+            height="450"
+            loading="eager"
+            decoding="async" />
         </div>
       </section>
 
@@ -78,7 +99,10 @@
         </div>
       </section>
     </main>
-    <footer class="site-footer">
+
+    <footer
+      class="site-footer"
+      role="contentinfo">
       <div class="container">
         <p>&copy; 2025 Gulp Static Project. All rights reserved.</p>
       </div>
