feat(ui): enhance styling and add new components
- Add custom SCSS for header, hero, and footer components
- Update font family and body styles for better readability
- Include new check.svg icons in both src and dist directories
- Refactor gulpfile.mjs for improved image handling

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,20 @@
     <link
       rel="icon"
       href="images/icons/check.svg" />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet" />
+    <link
+      rel="icon"
+      href="images/icons/check.svg" />
+  </head>
   </head>
   <body>
     <header class="site-header">
@@ -85,9 +99,23 @@
       </section>
     </main>
 
-    <footer class="site-footer">
+    <footer class="site-footer" role="contentinfo">
       <div class="container">
-        <p>&copy; 2025 Gulp Static Project. All rights reserved.</p>
+        <div class="footer-content">
+          <div class="footer-logo">
+            <img src="images/logo.png" alt="Site Logo" class="logo footer-logo" width="120" height="40">
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#signup">Sign Up</a></li>
+              <li><a href="#">Documentation</a></li>
+            </ul>
+          </div>
+          <div class="footer-copyright">
+            <p>&copy; 2025 Gulp Static Project. All rights reserved.</p>
+          </div>
+        </div>
       </div>
     </footer>
 
