chore: update README, fix icon path, and add features image
- Simplify and modernize README content to reflect futuristic features
- Correct the icon path in index.html for consistency
- Add features.png to the dist/images directory for production

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       href="css/main.css" />
     <link
       rel="icon"
-      href="images/icons/check.svg" />
+      href="images/check.svg" />
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com" />
