--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <title>Gulp 2025 Static Site</title>
+    <meta
+      name="description"
+      content="Enterprise-grade static site solutions powered by Gulp" />
+    <title>Gulp Enterprise | Modern Static Site Solutions</title>
     <link
       rel="stylesheet"
       href="css/main.css" />
@@ -20,24 +23,34 @@
       href="https://fonts.gstatic.com"
       crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
-    <link
-      rel="icon"
-      href="images/icons/check.svg" />
-  </head>
   </head>
   <body>
     <header class="site-header">
       <div class="container">
-        <img
-          src="images/logo.png"
-          alt="Site Logo"
-          class="logo" />
-        <nav class="nav">
+        <a
+          href="index.html"
+          class="logo-link">
+          <img
+            src="images/logo.png"
+            alt="Gulp Enterprise Logo"
+            class="logo"
+            width="180"
+            height="40" />
+        </a>
+        <nav class="main-nav">
           <ul class="nav-list">
-            <li><a href="#features">Features</a></li>
-            <li><a href="#signup">Sign Up</a></li>
+            <li>
+              <a
+                href="index.html"
+                class="active"
+                >Home</a
+              >
+            </li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -45,75 +58,101 @@
 
     <main>
       <section
-        id="hero"
-        class="hero">
+        class="hero"
+        aria-labelledby="hero-heading">
         <div class="container">
-          <h1>Speed Up Static</h1>
-          <p>
-            Gulp makes it easy to build, compile, and ship fast—without
-            overengineering.
-          </p>
-          <a
-            href="#signup"
-            class="btn btn-primary"
-            >Get Started</a
-          >
+          <div class="hero-content">
+            <h1 id="hero-heading">Enterprise Static Site Solutions</h1>
+            <p class="lead">
+              Robust, scalable static site architecture for large organizations
+            </p>
+            <div class="cta-group">
+              <a
+                href="services.html"
+                class="btn btn-primary"
+                >Our Solutions</a
+              >
+              <a
+                href="contact.html"
+                class="btn btn-secondary"
+                >Request Demo</a
+              >
+            </div>
+          </div>
           <img
             src="images/hero.jpg"
-            alt="Hero Banner"
+            alt="Corporate team working"
             class="hero-image" />
         </div>
       </section>
 
       <section
-        id="features"
-        class="features">
+        class="features"
+        aria-labelledby="features-heading">
         <div class="container">
-          <h2>Features</h2>
-          <ul class="feature-list">
-            <li>Lightning-fast Sass compiling</li>
-            <li>Modern JS bundling</li>
-            <li>Live reload dev server</li>
-            <li>Image optimization built-in</li>
-          </ul>
+          <h2 id="features-heading">Core Enterprise Features</h2>
+          <div class="feature-cards">
+            <article class="feature-card">
+              <h3>Global CDN Integration</h3>
+              <p>Instant global deployment with automatic CDN distribution</p>
+            </article>
+            <article class="feature-card">
+              <h3>Enterprise Security</h3>
+              <p>Built-in security headers and CSP generation</p>
+            </article>
+            <article class="feature-card">
+              <h3>Scalable Architecture</h3>
+              <p>Handles thousands of pages with ease</p>
+            </article>
+          </div>
         </div>
       </section>
 
       <section
-        id="signup"
-        class="signup">
+        class="contact-cta"
+        aria-labelledby="contact-heading">
         <div class="container">
-          <img
-            src="images/features.png"
-            alt="Features"
-            class="hero-image" />
-          <h2>Sign up for updates</h2>
-          <form id="signupForm">
-            <input
-              type="email"
-              placeholder="Your email"
-              required />
-            <button type="submit">Join</button>
+          <h2 id="contact-heading">Ready to modernize your static sites?</h2>
+          <form
+            class="contact-form"
+            id="contactForm">
+            <div class="form-group">
+              <label for="email">Work Email</label>
+              <input
+                type="email"
+                id="email"
+                required />
+            </div>
+            <button
+              type="submit"
+              class="btn btn-primary">
+              Contact Sales
+            </button>
           </form>
         </div>
       </section>
     </main>
 
-    <footer class="site-footer" role="contentinfo">
+    <footer class="site-footer">
       <div class="container">
         <div class="footer-content">
           <div class="footer-logo">
-            <img src="images/logo.png" alt="Site Logo" class="logo footer-logo" width="120" height="40">
+            <img
+              src="images/logo.png"
+              alt="Gulp Enterprise"
+              width="120"
+              height="40" />
           </div>
-          <div class="footer-links">
+          <nav class="footer-nav">
             <ul>
-              <li><a href="#features">Features</a></li>
-              <li><a href="#signup">Sign Up</a></li>
-              <li><a href="#">Documentation</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
-          </div>
+          </nav>
           <div class="footer-copyright">
-            <p>&copy; 2025 Gulp Static Project. All rights reserved.</p>
+            <p>&copy; 2025 Gulp Enterprise. All rights reserved.</p>
           </div>
         </div>
       </div>
