refactor(layout): remove redundant container divs and center footer content
Simplify HTML structure by removing unnecessary container divs across multiple pages.
Add justify-content and align-items properties to center footer content in CSS.

--- a/src/about.html
+++ b/src/about.html
@@ -58,12 +58,10 @@
 
     <main>
       <section class="hero about-hero">
-        <div class="container">
-          <h1>Our Corporate Story</h1>
-          <p class="lead">
-            Building the future of static site development since 2025
-          </p>
-        </div>
+        <h1>Our Corporate Story</h1>
+        <p class="lead">
+          Building the future of static site development since 2025
+        </p>
       </section>
 
       <section class="about-content">
@@ -123,42 +121,36 @@
       </section>
 
       <section class="cta-section">
-        <div class="container">
-          <h2>Join our growing team</h2>
-          <p>
-            We're always looking for talented individuals to join our mission
-          </p>
-          <a
-            href="contact.html"
-            class="btn btn-primary"
-            >View Careers</a
-          >
-        </div>
+        <h2>Join our growing team</h2>
+        <p>We're always looking for talented individuals to join our mission</p>
+        <a
+          href="contact.html"
+          class="btn btn-primary"
+          >View Careers</a
+        >
       </section>
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-logo">
-            <img
-              src="images/logo.png"
-              alt="Gulp Enterprise"
-              class="logo footer-logo"
-              width="120"
-              height="40" />
-          </div>
-          <div class="footer-links">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-          <div class="footer-copyright">
-            <p>&copy; 2025 Gulp Enterprise. All rights reserved.</p>
-          </div>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img
+            src="images/logo.png"
+            alt="Gulp Enterprise"
+            class="logo footer-logo"
+            width="120"
+            height="40" />
+        </div>
+        <div class="footer-links">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-copyright">
+          <p>&copy; 2025 Gulp Enterprise. All rights reserved.</p>
         </div>
       </div>
     </footer>
