feat(ui): add feature card styling and restructure about page sections
Introduce a new `.feature-card` class with hover effects and transitions to enhance user interaction. Restructure the about page to position the leadership section prominently and improve overall layout consistency. Additionally, optimize the services and contact pages for better responsiveness and visual hierarchy.

--- a/src/services.html
+++ b/src/services.html
@@ -67,70 +67,63 @@
       </section>
 
       <section class="services-list">
-        <div class="container">
-          <h2>Our Service Offerings</h2>
+        <h2>Our Service Offerings</h2>
+        <div class="service-grid">
+          <article class="service-card">
+            <h3>Static Site Generation</h3>
+            <p>Enterprise-grade static site generation with Gulp automation</p>
+            <ul class="service-features">
+              <li>Automated build processes</li>
+              <li>Content optimization</li>
+              <li>Performance tuning</li>
+            </ul>
+            <a
+              href="#"
+              class="btn btn-secondary"
+              >Learn More</a
+            >
+          </article>
 
-          <div class="service-grid">
-            <article class="service-card">
-              <h3>Static Site Generation</h3>
-              <p>
-                Enterprise-grade static site generation with Gulp automation
-              </p>
-              <ul class="service-features">
-                <li>Automated build processes</li>
-                <li>Content optimization</li>
-                <li>Performance tuning</li>
-              </ul>
-              <a
-                href="#"
-                class="btn btn-secondary"
-                >Learn More</a
-              >
-            </article>
+          <article class="service-card">
+            <h3>Asset Optimization</h3>
+            <p>Comprehensive asset optimization for enterprise websites</p>
+            <ul class="service-features">
+              <li>Image compression</li>
+              <li>CSS/JS minification</li>
+              <li>Cache optimization</li>
+            </ul>
+            <a
+              href="#"
+              class="btn btn-secondary"
+              >Learn More</a
+            >
+          </article>
 
-            <article class="service-card">
-              <h3>Asset Optimization</h3>
-              <p>Comprehensive asset optimization for enterprise websites</p>
-              <ul class="service-features">
-                <li>Image compression</li>
-                <li>CSS/JS minification</li>
-                <li>Cache optimization</li>
-              </ul>
-              <a
-                href="#"
-                class="btn btn-secondary"
-                >Learn More</a
-              >
-            </article>
-
-            <article class="service-card">
-              <h3>Enterprise Deployment</h3>
-              <p>Secure, reliable deployment solutions for static sites</p>
-              <ul class="service-features">
-                <li>CI/CD integration</li>
-                <li>Multi-environment support</li>
-                <li>Security compliance</li>
-              </ul>
-              <a
-                href="#"
-                class="btn btn-secondary"
-                >Learn More</a
-              >
-            </article>
-          </div>
+          <article class="service-card">
+            <h3>Enterprise Deployment</h3>
+            <p>Secure, reliable deployment solutions for static sites</p>
+            <ul class="service-features">
+              <li>CI/CD integration</li>
+              <li>Multi-environment support</li>
+              <li>Security compliance</li>
+            </ul>
+            <a
+              href="#"
+              class="btn btn-secondary"
+              >Learn More</a
+            >
+          </article>
         </div>
       </section>
 
       <section class="cta-section">
-        <div class="container">
-          <h2>Ready to transform your static site workflow?</h2>
-          <p>Contact our team to schedule a consultation</p>
-          <a
-            href="contact.html"
-            class="btn btn-primary"
-            >Contact Us</a
-          >
-        </div>
+        <h2>Ready to transform your static site workflow?</h2>
+        <p>Contact our team to schedule a consultation</p>
+        <a
+          href="contact.html"
+          class="btn btn-primary"
+          >Contact Us</a
+        >
       </section>
     </main>
 
