--- a/src/about.html
+++ b/src/about.html
@@ -66,27 +66,40 @@
 
       <section class="about-content">
         <div class="container">
+          <article class="about-section leadership">
+            <h2>Leadership Team</h2>
+            <div class="team-grid">
+              <div class="team-member">
+                <h3>Jane Smith</h3>
+                <p class="team-title">Chief Executive Officer</p>
+                <p>
+                  With over 15 years of experience in web development, Jane leads our company vision.
+                </p>
+              </div>
+              <div class="team-member">
+                <h3>John Doe</h3>
+                <p class="team-title">Chief Technology Officer</p>
+                <p>
+                  John oversees our technical strategy and ensures we stay at the cutting edge.
+                </p>
+              </div>
+            </div>
+          </article>
+
           <article class="about-section">
             <h2>Company History</h2>
             <p>
-              Founded in 2025, Gulp Enterprise specializes in creating
-              high-performance static site solutions for businesses of all
-              sizes. Our mission is to simplify the development process while
-              maximizing performance and security.
+              Founded in 2025, Gulp Enterprise specializes in creating high-performance static site solutions for businesses of all sizes. Our mission is to simplify the development process while maximizing performance and security.
             </p>
             <p>
-              With a team of dedicated experts, we've helped hundreds of
-              companies transform their web presence through optimized static
-              site workflows.
+              With a team of dedicated experts, we've helped hundreds of companies transform their web presence through optimized static site workflows.
             </p>
           </article>
 
           <article class="about-section">
             <h2>Our Approach</h2>
             <p>
-              At Gulp Enterprise, we believe in the power of simplicity. Our
-              approach combines cutting-edge technology with streamlined
-              processes to deliver exceptional results.
+              At Gulp Enterprise, we believe in the power of simplicity. Our approach combines cutting-edge technology with streamlined processes to deliver exceptional results.
             </p>
             <ul class="about-features">
               <li>Performance-first methodology</li>
@@ -94,28 +107,6 @@
               <li>Scalable architecture design</li>
               <li>Enterprise-grade support</li>
             </ul>
-          </article>
-
-          <article class="about-section">
-            <h2>Leadership Team</h2>
-            <div class="team-grid">
-              <div class="team-member">
-                <h3>Jane Smith</h3>
-                <p class="team-title">Chief Executive Officer</p>
-                <p>
-                  With over 15 years of experience in web development, Jane
-                  leads our company vision.
-                </p>
-              </div>
-              <div class="team-member">
-                <h3>John Doe</h3>
-                <p class="team-title">Chief Technology Officer</p>
-                <p>
-                  John oversees our technical strategy and ensures we stay at
-                  the cutting edge.
-                </p>
-              </div>
-            </div>
           </article>
         </div>
       </section>
