feat(navigation): add mobile navigation toggle and styles
Implement mobile navigation toggle button with hamburger icon, add styles for mobile navigation, and prevent body scrolling when navigation is open. Enhance accessibility by toggling aria-expanded attribute on button click and close navigation when a link is clicked.

--- a/src/about.html
+++ b/src/about.html
@@ -53,6 +53,9 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+          <span class="hamburger"></span>
+        </button>
       </div>
     </header>
 
@@ -93,7 +96,9 @@
             Founded in 2025, Gulp Enterprise specializes in creating
             high-performance static site solutions for businesses of all sizes.
             Our mission is to simplify the development process while maximizing
-            performance and security. With a team of dedicated experts, we've helped hundreds of companies transform their web presence through optimized static site workflows.
+            performance and security. With a team of dedicated experts, we've
+            helped hundreds of companies transform their web presence through
+            optimized static site workflows.
           </p>
         </article>
 
