--- a/src/contact.html
+++ b/src/contact.html
@@ -53,6 +53,11 @@
             </li>
           </ul>
         </nav>
+        <button
+          class="nav-toggle"
+          aria-label="Toggle navigation">
+          <span class="hamburger"></span>
+        </button>
       </div>
     </header>
 
