--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,9 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
+        <button class="nav-toggle" aria-label="Toggle navigation">
+          <span class="hamburger"></span>
+        </button>
       </div>
     </header>
 
