refactor: restructure HTML files and enhance build process
- Refactor HTML files to use `gulp-file-include` for better maintainability
- Add WebP image conversion to the build process
- Optimize image compression with additional plugins
- Improve sourcemaps handling based on environment

--- a/src/index.html
+++ b/src/index.html
@@ -1,164 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Enterprise-grade static site solutions powered by Gulp" />
-    <title>Gulp Enterprise | Modern Static Site Solutions</title>
-    <link
-      rel="stylesheet"
-      href="css/main.css" />
-    <link
-      rel="icon"
-      href="images/check.svg" />
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet" />
-  </head>
-  <body>
-    <header class="site-header">
-      <div class="container">
-        <a
-          href="index.html"
-          class="logo-link">
-          <img
-            src="images/logo.png"
-            alt="Gulp Enterprise Logo"
-            class="logo"
-            width="180"
-            height="40" />
-        </a>
-        <nav class="main-nav">
-          <ul class="nav-list">
-            <li>
-              <a
-                href="index.html"
-                class="active"
-                >Home</a
-              >
-            </li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-        <button class="nav-toggle" aria-label="Toggle navigation">
-          <span class="hamburger"></span>
-        </button>
-      </div>
-    </header>
-
-    <main>
-      <section
-        class="hero"
-        aria-labelledby="hero-heading">
-        <div class="container">
-          <div class="hero-content">
-            <h1 id="hero-heading">Enterprise Static Site Solutions</h1>
-            <p class="lead">
-              Robust, scalable static site architecture for large organizations
-            </p>
-            <div class="cta-group">
-              <a
-                href="services.html"
-                class="btn btn-primary"
-                >Our Solutions</a
-              >
-              <a
-                href="contact.html"
-                class="btn btn-secondary"
-                >Request Demo</a
-              >
-            </div>
-          </div>
-          <img
-            src="images/hero.jpg"
-            alt="Corporate team working"
-            class="hero-image" />
-        </div>
-      </section>
-
-      <section
-        class="features"
-        aria-labelledby="features-heading">
-        <h2 id="features-heading">Core Enterprise Features</h2>
-        <div class="feature-cards">
-          <article class="feature-card">
-            <h3>Global CDN Integration</h3>
-            <p>Instant global deployment with automatic CDN distribution</p>
-          </article>
-          <article class="feature-card">
-            <h3>Enterprise Security</h3>
-            <p>Built-in security headers and CSP generation</p>
-          </article>
-          <article class="feature-card">
-            <h3>Scalable Architecture</h3>
-            <p>Handles thousands of pages with ease</p>
-          </article>
-        </div>
-      </section>
-
-      <section
-        class="contact-cta"
-        aria-labelledby="contact-heading">
-        <div class="container">
-          <h2 id="contact-heading">Ready to modernize your static sites?</h2>
-          <form
-            class="contact-form"
-            id="contactForm">
-            <div class="form-group">
-              <label for="email">Work Email</label>
-              <input
-                type="email"
-                id="email"
-                required />
-            </div>
-            <button
-              type="submit"
-              class="btn btn-primary">
-              Contact Sales
-            </button>
-          </form>
-        </div>
-      </section>
-    </main>
-
-    <footer class="site-footer">
-      <div class="footer-content">
-        <div class="footer-logo">
-          <img
-            src="images/logo.png"
-            alt="Gulp Enterprise"
-            width="120"
-            height="40" />
-        </div>
-        <nav class="footer-nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="footer-copyright">
-          <p>&copy; 2025 Gulp Enterprise. All rights reserved.</p>
-        </div>
-      </div>
-    </footer>
-
-    <script
-      src="js/app.js"
-      type="module"></script>
-  </body>
-</html>
+@@include('layout/base.html', {
+"pageTitle": "Gulp Enterprise | Modern Static Site Solutions",
+"pageDescription": "Enterprise-grade static site solutions powered by Gulp",
+"page": "home",
+"header": "@@include('components/header.html', {'page': 'home'})",
+"content": "@@include('components/content-index.html')",
+"footer": "@@include('components/footer.html')"
+})
