--- a/src/contact.html
+++ b/src/contact.html
@@ -2,42 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Contact Gulp Enterprise for static site solutions" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact Gulp Enterprise for static site solutions" />
     <title>Contact Gulp Enterprise</title>
-    <link
-      rel="stylesheet"
-      href="css/main.css" />
-    <link
-      rel="icon"
-      href="images/check.svg" />
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="images/check.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
   </head>
   <body>
+
     <header class="site-header">
       <div class="container">
-        <a
-          href="index.html"
-          class="logo-link">
-          <img
-            src="images/logo.png"
-            alt="Gulp Enterprise Logo"
-            class="logo"
-            width="180"
-            height="40" />
+        <a href="index.html" class="logo-link">
+          <img src="images/logo.png" alt="Gulp Enterprise Logo" class="logo" width="180" height="40" />
         </a>
         <nav class="main-nav">
           <ul class="nav-list">
@@ -45,17 +25,11 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li>
-              <a
-                href="contact.html"
-                class="active"
-                >Contact</a
-              >
+              <a href="contact.html" class="active">Contact</a>
             </li>
           </ul>
         </nav>
-        <button
-          class="nav-toggle"
-          aria-label="Toggle navigation">
+        <button class="nav-toggle" aria-label="Toggle navigation">
           <span class="hamburger"></span>
         </button>
       </div>
@@ -78,9 +52,7 @@
             <ul class="contact-details">
               <li>
                 <strong>Email:</strong>
-                <a href="mailto:info@gulpenterprise.com"
-                  >info@gulpenterprise.com</a
-                >
+                <a href="mailto:info@gulpenterprise.com">info@gulpenterprise.com</a>
               </li>
               <li>
                 <strong>Phone:</strong>
@@ -98,38 +70,21 @@
             <h2>Send us a Message</h2>
             <div class="form-group">
               <label for="name">Full Name</label>
-              <input
-                type="text"
-                id="name"
-                name="name"
-                required />
+              <input type="text" id="name" name="name" required />
             </div>
             <div class="form-group">
               <label for="email">Email Address</label>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                required />
+              <input type="email" id="email" name="email" required />
             </div>
             <div class="form-group">
               <label for="company">Company</label>
-              <input
-                type="text"
-                id="company"
-                name="company" />
+              <input type="text" id="company" name="company" />
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea
-                id="message"
-                name="message"
-                rows="5"
-                required></textarea>
+              <textarea id="message" name="message" rows="5" required></textarea>
             </div>
-            <button
-              type="submit"
-              class="btn btn-primary">
+            <button type="submit" class="btn btn-primary">
               Send Message
             </button>
           </form>
@@ -140,12 +95,7 @@
     <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-logo">
-          <img
-            src="images/logo.png"
-            alt="Gulp Enterprise"
-            class="logo footer-logo"
-            width="120"
-            height="40" />
+          <img src="images/logo.png" alt="Gulp Enterprise" class="logo footer-logo" width="120" height="40" />
         </div>
         <div class="footer-links">
           <ul>
@@ -161,8 +111,6 @@
       </div>
     </footer>
 
-    <script
-      src="js/app.js"
-      type="module"></script>
+    <script src="js/app.js" type="module"></script>
   </body>
 </html>
