--- a/src/services.html
+++ b/src/services.html
@@ -2,53 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Enterprise-grade static site solutions powered by Gulp" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Enterprise-grade static site solutions powered by Gulp" />
     <title>Enterprise Solutions | Gulp</title>
-    <link
-      rel="stylesheet"
-      href="css/main.css" />
-    <link
-      rel="icon"
-      href="images/check.svg" />
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="images/check.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
   </head>
   <body>
+
     <header class="site-header">
       <div class="container">
-        <a
-          href="index.html"
-          class="logo-link">
-          <img
-            src="images/logo.png"
-            alt="Gulp Enterprise Logo"
-            class="logo"
-            width="180"
-            height="40" />
+        <a href="index.html" class="logo-link">
+          <img src="images/logo.png" alt="Gulp Enterprise Logo" class="logo" width="180" height="40" />
         </a>
         <nav class="main-nav">
           <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li>
-              <a
-                href="services.html"
-                class="active"
-                >Services</a
-              >
+              <a href="services.html" class="active">Services</a>
             </li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -79,11 +55,7 @@
               <li>Content optimization</li>
               <li>Performance tuning</li>
             </ul>
-            <a
-              href="#"
-              class="btn btn-secondary"
-              >Learn More</a
-            >
+            <a href="#" class="btn btn-secondary">Learn More</a>
           </article>
 
           <article class="service-card">
@@ -94,11 +66,7 @@
               <li>CSS/JS minification</li>
               <li>Cache optimization</li>
             </ul>
-            <a
-              href="#"
-              class="btn btn-secondary"
-              >Learn More</a
-            >
+            <a href="#" class="btn btn-secondary">Learn More</a>
           </article>
 
           <article class="service-card">
@@ -109,11 +77,7 @@
               <li>Multi-environment support</li>
               <li>Security compliance</li>
             </ul>
-            <a
-              href="#"
-              class="btn btn-secondary"
-              >Learn More</a
-            >
+            <a href="#" class="btn btn-secondary">Learn More</a>
           </article>
         </div>
       </section>
@@ -121,23 +85,14 @@
       <section class="cta-section">
         <h2>Ready to transform your static site workflow?</h2>
         <p>Contact our team to schedule a consultation</p>
-        <a
-          href="contact.html"
-          class="btn btn-primary"
-          >Contact Us</a
-        >
+        <a href="contact.html" class="btn btn-primary">Contact Us</a>
       </section>
     </main>
 
     <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-logo">
-          <img
-            src="images/logo.png"
-            alt="Gulp Enterprise"
-            class="logo footer-logo"
-            width="120"
-            height="40" />
+          <img src="images/logo.png" alt="Gulp Enterprise" class="logo footer-logo" width="120" height="40" />
         </div>
         <div class="footer-links">
           <ul>
@@ -153,8 +108,6 @@
       </div>
     </footer>
 
-    <script
-      src="js/app.js"
-      type="module"></script>
+    <script src="js/app.js" type="module"></script>
   </body>
 </html>
