feat(ui): add FontAwesome icons and hero background SVGs
Introduce FontAwesome icons across all pages to enhance visual appeal and user experience. Added custom SVG backgrounds for hero sections and implemented corresponding SCSS styles. Updated package.json to include FontAwesome dependency and related build tools.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
+    <link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
 
@@ -56,16 +57,16 @@
         <h2 id="features-heading">Core Enterprise Features</h2>
         <div class="feature-cards">
           <article class="feature-card">
-            <h3>Global CDN Integration</h3>
-            <p>Instant global deployment with automatic CDN distribution</p>
+            <h3><i class="fas fa-globe"></i> Global CDN Integration</h3>
+            <p><i class="fas fa-bolt"></i> Instant global deployment with automatic CDN distribution</p>
           </article>
           <article class="feature-card">
-            <h3>Enterprise Security</h3>
-            <p>Built-in security headers and CSP generation</p>
+            <h3><i class="fas fa-shield-alt"></i> Enterprise Security</h3>
+            <p><i class="fas fa-lock"></i> Built-in security headers and CSP generation</p>
           </article>
           <article class="feature-card">
-            <h3>Scalable Architecture</h3>
-            <p>Handles thousands of pages with ease</p>
+            <h3><i class="fas fa-expand-arrows-alt"></i> Scalable Architecture</h3>
+            <p><i class="fas fa-server"></i> Handles thousands of pages with ease</p>
           </article>
         </div>
       </section>
@@ -89,7 +90,7 @@
     <footer class="site-footer">
       <div class="footer-content">
         <div class="footer-logo">
-          <img src="images/logo.png" alt="Gulp Enterprise" width="120" height="40" />
+          <img src="images/logo.png" alt="Gulp Enterprise" class="logo footer-logo" width="120" height="40" />
         </div>
         <div class="footer-links">
           <ul>
