--- a/src/services.html
+++ b/src/services.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
+    <link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
 
@@ -48,34 +49,34 @@
       <section class="services-list">
         <div class="service-grid">
           <article class="service-card">
-            <h3>Static Site Generation</h3>
+            <h3><i class="fas fa-cogs"></i> Static Site Generation</h3>
             <p>Enterprise-grade static site generation with Gulp automation</p>
             <ul class="service-features">
-              <li>Automated build processes</li>
-              <li>Content optimization</li>
-              <li>Performance tuning</li>
+              <li><i class="fas fa-sync"></i> Automated build processes</li>
+              <li><i class="fas fa-file-alt"></i> Content optimization</li>
+              <li><i class="fas fa-tachometer-alt"></i> Performance tuning</li>
             </ul>
             <a href="#" class="btn btn-secondary">Learn More</a>
           </article>
 
           <article class="service-card">
-            <h3>Asset Optimization</h3>
+            <h3><i class="fas fa-compress-arrows-alt"></i> Asset Optimization</h3>
             <p>Comprehensive asset optimization for enterprise websites</p>
             <ul class="service-features">
-              <li>Image compression</li>
-              <li>CSS/JS minification</li>
-              <li>Cache optimization</li>
+              <li><i class="fas fa-images"></i> Image compression</li>
+              <li><i class="fas fa-file-code"></i> CSS/JS minification</li>
+              <li><i class="fas fa-database"></i> Cache optimization</li>
             </ul>
             <a href="#" class="btn btn-secondary">Learn More</a>
           </article>
 
           <article class="service-card">
-            <h3>Enterprise Deployment</h3>
+            <h3><i class="fas fa-rocket"></i> Enterprise Deployment</h3>
             <p>Secure, reliable deployment solutions for static sites</p>
             <ul class="service-features">
-              <li>CI/CD integration</li>
-              <li>Multi-environment support</li>
-              <li>Security compliance</li>
+              <li><i class="fas fa-infinity"></i> CI/CD integration</li>
+              <li><i class="fas fa-layer-group"></i> Multi-environment support</li>
+              <li><i class="fas fa-shield-alt"></i> Security compliance</li>
             </ul>
             <a href="#" class="btn btn-secondary">Learn More</a>
           </article>
