--- a/src/about.html
+++ b/src/about.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
+    <link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
 
@@ -22,9 +23,7 @@
         <nav class="main-nav">
           <ul class="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li>
-              <a href="about.html" class="active">About</a>
-            </li>
+            <li><a href="about.html" class="active">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -48,16 +47,16 @@
           <h2>Leadership Team</h2>
           <div class="team-grid">
             <div class="team-member">
-              <h3>Jane Smith</h3>
-              <p class="team-title">Chief Executive Officer</p>
+              <h3><i class="fas fa-user-tie"></i> Jane Smith</h3>
+              <p class="team-title"><i class="fas fa-crown"></i> Chief Executive Officer</p>
               <p>
                 With over 15 years of experience in web development, Jane leads
                 our company vision.
               </p>
             </div>
             <div class="team-member">
-              <h3>John Doe</h3>
-              <p class="team-title">Chief Technology Officer</p>
+              <h3><i class="fas fa-user-tie"></i> John Doe</h3>
+              <p class="team-title"><i class="fas fa-microchip"></i> Chief Technology Officer</p>
               <p>
                 John oversees our technical strategy and ensures we stay at the
                 cutting edge.
@@ -86,10 +85,10 @@
             to deliver exceptional results.
           </p>
           <ul class="about-features">
-            <li>Performance-first methodology</li>
-            <li>Security-focused development</li>
-            <li>Scalable architecture design</li>
-            <li>Enterprise-grade support</li>
+            <li><i class="fas fa-tachometer-alt"></i> Performance-first methodology</li>
+            <li><i class="fas fa-shield-alt"></i> Security-focused development</li>
+            <li><i class="fas fa-expand-arrows-alt"></i> Scalable architecture design</li>
+            <li><i class="fas fa-headset"></i> Enterprise-grade support</li>
           </ul>
         </article>
       </section>
