--- a/src/contact.html
+++ b/src/contact.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet" />
+    <link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
   </head>
   <body>
 
@@ -51,33 +52,36 @@
             <h2>Contact Information</h2>
             <ul class="contact-details">
               <li>
+                <i class="fas fa-envelope"></i>
                 <strong>Email:</strong>
                 <a href="mailto:info@gulpenterprise.com">info@gulpenterprise.com</a>
               </li>
               <li>
+                <i class="fas fa-phone"></i>
                 <strong>Phone:</strong>
                 <a href="tel:+15551234567">+1 (555) 123-4567</a>
               </li>
               <li>
+                <i class="fas fa-map-marker-alt"></i>
                 <strong>Address:</strong>
                 <address>123 Web Dev Lane, San Francisco, CA 94107</address>
               </li>
             </ul>
-            <h3>Office Hours</h3>
-            <p>Monday - Friday: 9:00 AM - 5:00 PM PST</p>
+            <h3><i class="fas fa-clock"></i> Office Hours</h3>
+            <p><i class="fas fa-calendar-alt"></i> Monday - Friday: 9:00 AM - 5:00 PM PST</p>
           </div>
           <form class="contact-form">
             <h2>Send us a Message</h2>
             <div class="form-group">
-              <label for="name">Full Name</label>
+              <label for="name"><i class="fas fa-user"></i> Full Name</label>
               <input type="text" id="name" name="name" required />
             </div>
             <div class="form-group">
-              <label for="email">Email Address</label>
+              <label for="email"><i class="fas fa-envelope"></i> Email Address</label>
               <input type="email" id="email" name="email" required />
             </div>
             <div class="form-group">
-              <label for="company">Company</label>
+              <label for="company"><i class="fas fa-building"></i> Company</label>
               <input type="text" id="company" name="company" />
             </div>
             <div class="form-group">
